--- a/p/esmulti_f6b27b908b531eabcd90f34b452d95d20bb2c2c8/index.html
+++ b/p/esmulti_f6b27b908b531eabcd90f34b452d95d20bb2c2c8/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Suspeito é preso após bater moto roubada em viatura da PRF em Linhares</title>
-  <meta name="description" content="Homem tentou fugir da Polícia Rodoviária Federal na BR-101, colidiu com viatura e foi detido com motocicleta roubada."/>
+  <title>Suspeito bate de frente com viatura da PRF e acaba preso com moto roubada em Linhares</title>
+  <meta name="description" content="Homem foi preso após colidir moto roubada contra viatura da PRF na BR-101, em Linhares."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_f6b27b908b531eabcd90f34b452d95d20bb2c2c8/"/>
-  <meta property="og:title" content="Suspeito é preso após bater moto roubada em viatura da PRF em Linhares"/>
-  <meta property="og:description" content="Homem tentou fugir da Polícia Rodoviária Federal na BR-101, colidiu com viatura e foi detido com motocicleta roubada."/>
+  <meta property="og:title" content="Suspeito bate de frente com viatura da PRF e acaba preso com moto roubada em Linhares"/>
+  <meta property="og:description" content="Homem foi preso após colidir moto roubada contra viatura da PRF na BR-101, em Linhares."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F9f6cd29e-150e-4312-9df7-cd2bc772fba0.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F9f6cd29e-150e-4312-9df7-cd2bc772fba0.jpeg"/>
@@ -21,17 +21,17 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Suspeito é preso após bater moto roubada em viatura da PRF em Linhares</h1>
+    <h1>Suspeito bate de frente com viatura da PRF e acaba preso com moto roubada em Linhares</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F9f6cd29e-150e-4312-9df7-cd2bc772fba0.jpeg" alt="Suspeito é preso após bater moto roubada em viatura da PRF em Linhares" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F9f6cd29e-150e-4312-9df7-cd2bc772fba0.jpeg" alt="Suspeito bate de frente com viatura da PRF e acaba preso com moto roubada em Linhares" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Homem tentou fugir da Polícia Rodoviária Federal na BR-101, colidiu com viatura e foi detido com motocicleta roubada.</p>
-<p>A Polícia Rodoviária Federal recuperou uma motocicleta roubada na noite de quarta-feira (18), na BR-101, em Linhares, após o condutor tentar fugir da abordagem e colidir com a viatura policial.</p>
-<p>A ocorrência começou por volta das 19h10, quando a equipe da PRF recebeu informações sobre uma moto suspeita que acessou um desvio próximo ao posto policial na localidade de Jataipeba. Os agentes localizaram o veículo entre Bebedouro e a ponte.</p>
-<p>Ao receber ordem de parada, o motociclista parou momentaneamente, mas acelerou bruscamente ao ver os policiais desembarcarem, tentando fugir. Cerca de 30 metros à frente, ele fez uma manobra de retorno e colidiu com a parte dianteira da viatura, sendo então abordado e detido.</p>
-<p>Durante o interrogatório, o homem confessou ter recebido R$ 1.000 para transportar a motocicleta até a Bahia, mas não revelou o destinatário. Na mochila, foi encontrada uma chave de fenda adaptada, conhecida como &quot;micha&quot;, usada para arrombar e ligar a ignição de motos.</p>
-<p>A vistoria na motocicleta indicou adulteração, com marcas de lixamento no motor para apagar a identificação. A PRF identificou o veículo como uma Honda NXR 160 Bros CBS azul, com registro ativo de furto/roubo.</p>
-<p>O suspeito foi preso e encaminhado com a motocicleta para a Delegacia da Polícia Civil de Linhares para os procedimentos legais.</p>
+    <p class="lead">Homem foi preso após colidir moto roubada contra viatura da PRF na BR-101, em Linhares.</p>
+<p>A Polícia Rodoviária Federal recuperou uma motocicleta roubada após uma tentativa de fuga que terminou em colisão na noite de quarta-feira (18), na BR-101, em Linhares.</p>
+<p>A ocorrência começou por volta das 19h10, quando a equipe da PRF recebeu informações sobre uma moto suspeita que havia acessado um desvio próximo ao posto policial na localidade de Jataipeba. Os agentes localizaram o veículo entre Bebedouro e a ponte.</p>
+<p>Ao receber ordem de parada, o motociclista parou momentaneamente, mas acelerou bruscamente ao ver os policiais desembarcarem, tentando fugir. Cerca de 30 metros à frente, ele fez uma manobra brusca de retorno e colidiu contra a parte dianteira da viatura da PRF, sendo então detido.</p>
+<p>Durante o interrogatório, o homem confessou ter recebido R$ 1.000 para transportar a motocicleta até a Bahia, sem revelar o destinatário final. Na mochila, foi encontrada uma chave de fenda adaptada, conhecida como &quot;micha&quot;, usada para arrombar e ligar ignição de motos.</p>
+<p>A vistoria da moto revelou adulterações, como marcas de lixamento no motor para apagar a identificação. A análise confirmou que o veículo era uma Honda NXR 160 Bros CBS azul, com registro ativo de furto/roubo.</p>
+<p>O suspeito foi preso e encaminhado, junto com a motocicleta recuperada, para a Delegacia da Polícia Civil de Linhares, onde os procedimentos legais foram realizados.</p>
   </div>
 </body>
 </html>
