--- a/p/esmulti_9ee34d40e254b61041c2fc56793731ee265b2e96/index.html
+++ b/p/esmulti_9ee34d40e254b61041c2fc56793731ee265b2e96/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Nova espécie de planta, o antúrio-das-pedras, é descoberta no Espírito Santo</title>
-  <meta name="description" content="Pesquisadores identificam a Anthurium petraeum, planta que cresce sobre rochas em Linhares e Marilândia, já ameaçada de extinção."/>
+  <meta name="description" content="Pesquisadores identificaram a Anthurium petraeum, planta que cresce sobre rochas em Linhares e Marilândia, já ameaçada de extinção."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_9ee34d40e254b61041c2fc56793731ee265b2e96/"/>
   <meta property="og:title" content="Nova espécie de planta, o antúrio-das-pedras, é descoberta no Espírito Santo"/>
-  <meta property="og:description" content="Pesquisadores identificam a Anthurium petraeum, planta que cresce sobre rochas em Linhares e Marilândia, já ameaçada de extinção."/>
+  <meta property="og:description" content="Pesquisadores identificaram a Anthurium petraeum, planta que cresce sobre rochas em Linhares e Marilândia, já ameaçada de extinção."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F2ef955ff-4cc0-49f7-8c17-2bdedb46839f.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F2ef955ff-4cc0-49f7-8c17-2bdedb46839f.jpeg"/>
@@ -25,12 +25,13 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2F2ef955ff-4cc0-49f7-8c17-2bdedb46839f.jpeg" alt="Nova espécie de planta, o antúrio-das-pedras, é descoberta no Espírito Santo" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Pesquisadores identificam a Anthurium petraeum, planta que cresce sobre rochas em Linhares e Marilândia, já ameaçada de extinção.</p>
-<p>A Anthurium petraeum, conhecida popularmente como antúrio-das-pedras, é uma nova espécie da família das aráceas descoberta no Espírito Santo. A planta se destaca por crescer sobre afloramentos rochosos e por suas folhas em formato de coração.</p>
-<p>O primeiro contato com a planta ocorreu em março de 2022 durante uma expedição científica em Linhares, que tinha como objetivo localizar e mapear espécies ameaçadas fora de unidades de conservação. O material coletado foi analisado pelo botânico Rodrigo Valadares, que suspeitou da novidade.</p>
-<p>A confirmação da nova espécie foi feita após estudos no acervo do Museu de Biologia Professor Mello Leitão, do Instituto Nacional da Mata Atlântica, em Santa Teresa. O estudo envolveu especialistas do INMA, UFES, Jardim Botânico do Rio de Janeiro e Universidade de São Paulo.</p>
-<p>A Anthurium petraeum é considerada endêmica do Espírito Santo, com registros apenas em Linhares e Marilândia. A planta já está ameaçada de extinção devido ao desmatamento na região e à biopirataria, pois sua beleza atrai o mercado ilegal de jardinagem e decoração.</p>
-<p>A descoberta faz parte do Plano de Ação Territorial de Conservação de Espécies Ameaçadas (PAT Capixaba-Gerais), coordenado pelo Instituto de Meio Ambiente e Recursos Hídricos do Espírito Santo em parceria com o Instituto Estadual de Florestas de Minas Gerais.</p>
+    <p class="lead">Pesquisadores identificaram a Anthurium petraeum, planta que cresce sobre rochas em Linhares e Marilândia, já ameaçada de extinção.</p>
+<p>A Anthurium petraeum, popularmente chamada de antúrio-das-pedras, foi descoberta por um grupo de pesquisadores brasileiros e pertence à família das aráceas. A planta se destaca por crescer sobre afloramentos rochosos, chamados inselbergs, e por suas folhas em formato de coração.</p>
+<p>O primeiro contato com a espécie ocorreu em março de 2022 durante uma expedição científica em Linhares, que tinha como objetivo localizar e mapear espécies ameaçadas fora de unidades de conservação. O material coletado foi analisado pelo doutor em botânica Rodrigo Valadares, da Universidade Federal do Espírito Santo (UFES), que suspeitou da novidade.</p>
+<p>A confirmação da nova espécie aconteceu após estudos no acervo do Museu de Biologia Professor Mello Leitão, do Instituto Nacional da Mata Atlântica (INMA), em Santa Teresa. O estudo contou com a participação de especialistas do INMA, UFES, Jardim Botânico do Rio de Janeiro (JBRJ) e Universidade de São Paulo (USP).</p>
+<p>A Anthurium petraeum é considerada endêmica do Espírito Santo, com registros apenas em Linhares e Marilândia. O pesquisador Ricardo Ribeiro, um dos autores do artigo, afirma que a planta já está possivelmente ameaçada de extinção devido ao desmatamento na região.</p>
+<p>Além disso, a beleza das flores e folhas atrai o mercado de jardinagem e decoração, tornando a espécie alvo de biopirataria, extração predatória e comércio ilegal, práticas que contribuem para o desaparecimento de diversas espécies.</p>
+<p>A expedição que resultou na descoberta integra o Plano de Ação Territorial de Conservação de Espécies Ameaçadas (PAT Capixaba-Gerais), coordenado pelo Instituto de Meio Ambiente e Recursos Hídricos do Espírito Santo (IEMA) em parceria com o Instituto Estadual de Florestas de Minas Gerais (IEF).</p>
   </div>
 </body>
 </html>
