--- a/p/esmulti_9ad190ed34f29938cba2e0b63a7a20d3ee44a2c4/index.html
+++ b/p/esmulti_9ad190ed34f29938cba2e0b63a7a20d3ee44a2c4/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Espírito Santo não teve dívidas atrasadas pagas pela União em janeiro de 2026</title>
-  <meta name="description" content="O Tesouro Nacional pagou R$ 257,73 milhões em dívidas atrasadas de estados e municípios em janeiro de 2026, mas o Espírito Santo não consta na lista."/>
+  <title>Espírito Santo não teve dívidas atrasadas pagas pelo Tesouro Nacional em janeiro de 2026</title>
+  <meta name="description" content="Tesouro Nacional pagou R$ 257,73 milhões em dívidas atrasadas de estados e municípios em janeiro de 2026, mas Espírito Santo não consta na lista."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_9ad190ed34f29938cba2e0b63a7a20d3ee44a2c4/"/>
-  <meta property="og:title" content="Espírito Santo não teve dívidas atrasadas pagas pela União em janeiro de 2026"/>
-  <meta property="og:description" content="O Tesouro Nacional pagou R$ 257,73 milhões em dívidas atrasadas de estados e municípios em janeiro de 2026, mas o Espírito Santo não consta na lista."/>
+  <meta property="og:title" content="Espírito Santo não teve dívidas atrasadas pagas pelo Tesouro Nacional em janeiro de 2026"/>
+  <meta property="og:description" content="Tesouro Nacional pagou R$ 257,73 milhões em dívidas atrasadas de estados e municípios em janeiro de 2026, mas Espírito Santo não consta na lista."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2025%2F12%2Feconomia-portal-1080.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2025%2F12%2Feconomia-portal-1080.jpg"/>
@@ -21,17 +21,16 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Espírito Santo não teve dívidas atrasadas pagas pela União em janeiro de 2026</h1>
+    <h1>Espírito Santo não teve dívidas atrasadas pagas pelo Tesouro Nacional em janeiro de 2026</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2025%2F12%2Feconomia-portal-1080.jpg" alt="Espírito Santo não teve dívidas atrasadas pagas pela União em janeiro de 2026" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2025%2F12%2Feconomia-portal-1080.jpg" alt="Espírito Santo não teve dívidas atrasadas pagas pelo Tesouro Nacional em janeiro de 2026" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">O Tesouro Nacional pagou R$ 257,73 milhões em dívidas atrasadas de estados e municípios em janeiro de 2026, mas o Espírito Santo não consta na lista.</p>
-<p>O Tesouro Nacional desembolsou R$ 257,73 milhões para quitar dívidas atrasadas de estados e municípios brasileiros em janeiro de 2026.</p>
-<p>Os maiores valores pagos foram para o Rio Grande do Norte (R$ 84,32 milhões), Rio de Janeiro (R$ 82,34 milhões) e Rio Grande do Sul (R$ 70,55 milhões), além de repasses menores para o Amapá e municípios da Bahia e do Tocantins.</p>
-<p>Esses pagamentos ocorrem quando estados ou municípios deixam de honrar empréstimos com garantia da União, que cobre a dívida e depois retém recursos federais destinados ao ente devedor para recuperar o valor com juros e encargos.</p>
-<p>Desde 2016, o governo federal já pagou R$ 86,78 bilhões para cobrir dívidas de governos regionais, mas recuperou apenas R$ 6,03 bilhões desse total.</p>
-<p>O Espírito Santo não aparece entre os estados com dívidas honradas pela União, indicando uma situação fiscal mais equilibrada em comparação a estados como Rio de Janeiro e Minas Gerais, que recorrem frequentemente à garantia federal.</p>
-<p>Em 2025, foram pagos mais de R$ 11 bilhões em dívidas atrasadas, concentradas principalmente em unidades federativas com maior desequilíbrio fiscal, o que reduz a autonomia dos estados sobre recursos federais.</p>
+    <p class="lead">Tesouro Nacional pagou R$ 257,73 milhões em dívidas atrasadas de estados e municípios em janeiro de 2026, mas Espírito Santo não consta na lista.</p>
+<p>Em janeiro de 2026, o Tesouro Nacional desembolsou R$ 257,73 milhões para quitar dívidas atrasadas de estados e municípios brasileiros. Os maiores valores foram destinados ao Rio Grande do Norte (R$ 84,32 milhões), Rio de Janeiro (R$ 82,34 milhões) e Rio Grande do Sul (R$ 70,55 milhões).</p>
+<p>Além desses, também houve repasses menores para o Amapá e municípios da Bahia e do Tocantins. O pagamento ocorre quando estados ou municípios deixam de honrar empréstimos com garantia da União, que cobre a dívida e depois retém recursos federais para recuperar o valor com juros e encargos.</p>
+<p>Desde 2016, o governo federal já pagou R$ 86,78 bilhões para cobrir dívidas de governos regionais, mas recuperou apenas R$ 6,03 bilhões desse montante, evidenciando o impacto dessas operações nas contas públicas nacionais.</p>
+<p>O Espírito Santo não aparece entre os entes que tiveram débitos cobertos pela União em janeiro de 2026, indicando uma situação fiscal mais equilibrada em relação a outros estados. O governo capixaba tem mantido suas obrigações financeiras em dia, diferentemente de estados como Rio de Janeiro e Minas Gerais.</p>
+<p>Em 2025, foram pagos mais de R$ 11 bilhões em dívidas atrasadas de estados e municípios, concentradas principalmente em unidades federativas com maior desequilíbrio fiscal. Estados que entram nessa lista perdem autonomia sobre parte dos recursos federais, que passam a ser bloqueados para quitar a dívida.</p>
   </div>
 </body>
 </html>
