--- a/p/esmulti_d1cfb0dedcd8e966cb5870afbebe5b0630242555/index.html
+++ b/p/esmulti_d1cfb0dedcd8e966cb5870afbebe5b0630242555/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Pedreiro que viajou para o casamento da filha morre atropelado por caminhão sem freio em Cachoeiro</title>
-  <meta name="description" content="Luciano José Teixeira, de 49 anos, morreu atropelado por um caminhão que perdeu os freios na rodovia ES 489, em Cachoeiro de Itapemirim."/>
+  <title>Pedreiro morre atropelado por caminhão sem freio em Cachoeiro</title>
+  <meta name="description" content="Luciano José Teixeira, de 49 anos, morreu atropelado por caminhão que perdeu os freios na Rodovia Ricardo Barbieri, em Cachoeiro de Itapemirim."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_d1cfb0dedcd8e966cb5870afbebe5b0630242555/"/>
-  <meta property="og:title" content="Pedreiro que viajou para o casamento da filha morre atropelado por caminhão sem freio em Cachoeiro"/>
-  <meta property="og:description" content="Luciano José Teixeira, de 49 anos, morreu atropelado por um caminhão que perdeu os freios na rodovia ES 489, em Cachoeiro de Itapemirim."/>
+  <meta property="og:title" content="Pedreiro morre atropelado por caminhão sem freio em Cachoeiro"/>
+  <meta property="og:description" content="Luciano José Teixeira, de 49 anos, morreu atropelado por caminhão que perdeu os freios na Rodovia Ricardo Barbieri, em Cachoeiro de Itapemirim."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Facidente-entre-caminhao-e-moto-resultou-na-morte-de-motociclista-em-cachoeiro-3149380-article.webp"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Facidente-entre-caminhao-e-moto-resultou-na-morte-de-motociclista-em-cachoeiro-3149380-article.webp"/>
@@ -21,16 +21,16 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Pedreiro que viajou para o casamento da filha morre atropelado por caminhão sem freio em Cachoeiro</h1>
+    <h1>Pedreiro morre atropelado por caminhão sem freio em Cachoeiro</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Facidente-entre-caminhao-e-moto-resultou-na-morte-de-motociclista-em-cachoeiro-3149380-article.webp" alt="Pedreiro que viajou para o casamento da filha morre atropelado por caminhão sem freio em Cachoeiro" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Facidente-entre-caminhao-e-moto-resultou-na-morte-de-motociclista-em-cachoeiro-3149380-article.webp" alt="Pedreiro morre atropelado por caminhão sem freio em Cachoeiro" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Luciano José Teixeira, de 49 anos, morreu atropelado por um caminhão que perdeu os freios na rodovia ES 489, em Cachoeiro de Itapemirim.</p>
-<p>O acidente ocorreu na manhã de quinta-feira (19) na rodovia Ricardo Barbieri, no bairro Boa Vista. Luciano pilotava uma motocicleta quando foi atingido pelo caminhão de carga que perdeu os freios.</p>
-<p>Luciano morava em Rio Bonito, no Rio de Janeiro, e havia viajado para Cachoeiro de Itapemirim para participar do casamento de uma de suas filhas, marcado para sábado (21).</p>
-<p>O motorista do caminhão, de 37 anos, relatou que havia acabado de sair de uma oficina mecânica quando percebeu a falha no freio do veículo. Ele permaneceu no local e o teste do bafômetro deu negativo para álcool.</p>
-<p>O genro da vítima, Gilberto Florindo, presenciou o acidente enquanto dirigia logo atrás, mas só descobriu que Luciano era seu sogro ao retornar ao local após perceber que ele não havia chegado ao despachante.</p>
-<p>A Polícia Científica realizou perícia no local e encaminhou o corpo para a Seção Regional de Medicina Legal de Cachoeiro de Itapemirim para necropsia. A Polícia Civil investiga as responsabilidades do acidente.</p>
+    <p class="lead">Luciano José Teixeira, de 49 anos, morreu atropelado por caminhão que perdeu os freios na Rodovia Ricardo Barbieri, em Cachoeiro de Itapemirim.</p>
+<p>O acidente ocorreu na manhã de quinta-feira (19) na rodovia ES 489, no bairro Boa Vista. Luciano pilotava uma motocicleta quando foi atingido pelo caminhão que perdeu os freios.</p>
+<p>Luciano morava em Rio Bonito, Rio de Janeiro, e havia viajado para Cachoeiro de Itapemirim para participar do casamento de uma de suas filhas, marcado para o sábado (21).</p>
+<p>O motorista do caminhão, de 37 anos, relatou que havia acabado de sair de uma oficina mecânica quando percebeu a falha nos freios do veículo. Ele permaneceu no local e o teste do bafômetro deu negativo.</p>
+<p>O genro da vítima, Gilberto Florindo, presenciou o acidente enquanto dirigia atrás de Luciano, mas só descobriu que a vítima era seu sogro ao retornar ao local após perceber que Luciano não havia chegado ao despachante.</p>
+<p>A Polícia Científica encaminhou o corpo de Luciano para a Seção Regional de Medicina Legal de Cachoeiro de Itapemirim para necropsia. A Polícia Civil investiga as responsabilidades do acidente.</p>
   </div>
 </body>
 </html>
