--- a/p/esmulti_85c729f85a14c3f67e3ade849c9ca144a3b7cc42/index.html
+++ b/p/esmulti_85c729f85a14c3f67e3ade849c9ca144a3b7cc42/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Jucees lança prêmio para municípios com melhor ambiente de negócios no Espírito Santo</title>
-  <meta name="description" content="Governo do Espírito Santo, por meio da Jucees, institui prêmio para cidades que avançarem na simplificação de processos empresariais."/>
+  <meta name="description" content="O Governo do Espírito Santo, por meio da Jucees, lançou o Prêmio Município Com Melhor Ambiente de Negócios para reconhecer avanços na simplificação de processos empresariais."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_85c729f85a14c3f67e3ade849c9ca144a3b7cc42/"/>
   <meta property="og:title" content="Jucees lança prêmio para municípios com melhor ambiente de negócios no Espírito Santo"/>
-  <meta property="og:description" content="Governo do Espírito Santo, por meio da Jucees, institui prêmio para cidades que avançarem na simplificação de processos empresariais."/>
+  <meta property="og:description" content="O Governo do Espírito Santo, por meio da Jucees, lançou o Prêmio Município Com Melhor Ambiente de Negócios para reconhecer avanços na simplificação de processos empresariais."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FPALACIO-ANCHIETA.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FPALACIO-ANCHIETA.jpeg"/>
@@ -25,13 +25,12 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FPALACIO-ANCHIETA.jpeg" alt="Jucees lança prêmio para municípios com melhor ambiente de negócios no Espírito Santo" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Governo do Espírito Santo, por meio da Jucees, institui prêmio para cidades que avançarem na simplificação de processos empresariais.</p>
-<p>A Junta Comercial do Estado do Espírito Santo (Jucees) lançou a primeira edição do Prêmio Município Com Melhor Ambiente de Negócios, voltado para cidades capixabas que apresentarem avanços na simplificação dos procedimentos de abertura, alteração e baixa de empresas.</p>
-<p>O edital foi publicado no Diário Oficial do Espírito Santo em 2 de fevereiro e prevê a criação de um ranking estadual baseado em indicadores do sistema integrador Simplifica-ES.</p>
-<p>A premiação inclui a entrega de um carro ao município vencedor, cinco computadores para o.</p>
+    <p class="lead">O Governo do Espírito Santo, por meio da Jucees, lançou o Prêmio Município Com Melhor Ambiente de Negócios para reconhecer avanços na simplificação de processos empresariais.</p>
+<p>A iniciativa selecionará cidades capixabas que tenham avançado na simplificação dos procedimentos de abertura, alteração e baixa de empresas, com base em indicadores do sistema integrador Simplifica-ES.</p>
+<p>O edital, publicado no Diário Oficial do Espírito Santo em 2 de fevereiro, prevê a criação de um ranking estadual e a entrega de prêmios: um carro para o município vencedor, cinco computadores para o.</p>
 <p>Seis critérios serão avaliados: Gestão Municipal, Termo de Adesão, Decreto da Lei da Liberdade Econômica, Consulta Prévia, Cadastro da Inscrição Municipal e Emissão de Alvará de Localização e Funcionamento.</p>
-<p>O desempenho dos municípios poderá ser acompanhado no site ranking.jucees.es.gov.br, onde também estão disponíveis o regulamento e o cronograma da premiação, com atualizações regulares dos dados.</p>
-<p>O diretor-geral da Jucees, Paulo Menegueli, afirmou que a iniciativa visa facilitar a vida do empresário e fortalecer a economia capixaba por meio da simplificação dos processos municipais.</p>
+<p>O desempenho de cada município poderá ser acompanhado no site ranking.jucees.es.gov.br, onde também estão disponíveis o regulamento e o cronograma da premiação, com atualizações regulares dos dados.</p>
+<p>O diretor-geral da Jucees, Paulo Menegueli, afirmou que o objetivo é facilitar a vida do empresário e fortalecer a economia capixaba por meio da simplificação dos processos municipais.</p>
   </div>
 </body>
 </html>
